app/wasmio/src/application/s3/snapshots/wasmio__application__s3__path__tests__parse_s3_path_fail_2.snap
---
source: app/wasmio/src/application/s3/path.rs
expression: "S3Path::try_from_path(\"a/\")"
---
Err(
    S3Error {
        message: None,
        kind: InvalidURI,
    },
)
